tests/ui/parser/issues/issue-103748-ICE-wrong-braces.stderr
error: unexpected token: `Citron`
  --> $DIR/issue-103748-ICE-wrong-braces.rs:3:38
   |
LL | struct Apple((Apple, Option(Banana ? Citron)));
   |                                      ^^^^^^ unexpected token after this

error: aborting due to 1 previous error

